--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h2{
     grid-template-areas:"musculacion boxeo cross"
                         "spinning funcional relax";
     justify-content: center; 
-    background-color: white;         
+    background-color: black;         
     row-gap: 15px;
     column-gap: 15px;
     
