--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ main {
 header{
     position: sticky;
     top: 0px;
-    background-color: black;
+    background-color: white;
     width: 100vw;
 }
 
