cambio color de footer

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ h2::selection{
 }
 .footer__pie{
     
-    background-color:rgb(233, 12, 12);
+    background-color:black;
 }
 .contacto__footer{
     text-align: left;
