--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "footer";
 @import "header";
+@import"textos";
+@import"main";
 @import "mediaquerie";
 
 *{
@@ -8,435 +10,5 @@
     padding: 0px; /* MARGEN INTERNO */
 }
 
-h1 {
-    text-align:left;
-    padding: 70px;
-    font-size: 70px;
-    font-family: 'Noto Sans Display', sans-serif;
-    color:$color-principal;
-    background-image: url('../resources/portadaindexsola.png');
-    background-position:center;
-    
-    
-}
-h2{
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Noto Sans Display', sans-serif;
-    /* background-image: url('../resources/ENTRENAMIENTO\ DE\ ALTA\ CALIDAD.png'); */
-    color:$color-principal;
-    
-}
-h3 {
-    padding-bottom: 15px;
-    text-align: center;
-    color:$color-secundario;
-}
-h4{
-    font-size: 15px;
-    padding-bottom: 15px;
-}
-button{
-    background-image: linear-gradient(white,$color-principal );
-}
-button:hover {
-    background-image: linear-gradient($color-principal, white);
-    transform: scale(0.9,0.9);
-}
-p{
-    padding: 0 16px;
-    
-}
-a{
-    text-decoration: none;
-    color: $color-principal;
-}
-a:visited{
-    color: white;
-}
 
-main {
-    flex-wrap: wrap;
-    background-color:$color-secundario;
-    /* height: 500vh; */ 
-}
-.main__index{
-    height: 370vh;
-}
-
-.columna__grid{
-    width: 100vw;
-    height: 100vw; 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:"musculacion boxeo cross"
-                        "spinning funcional relax";
-    justify-content: center; 
-    background-color: $color-secundario ;        
-    row-gap: 15px; 
-    column-gap: 15px;
-.musculacion{
-    background-image: url("../resources/musculacionindex5.png");
-    grid-area: musculacion;
-    background-position: center;
-    background-size:cover ;
-
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-.boxeo{
-    background-image: url("../resources/box.png");
-    grid-area: boxeo;
-    background-position: center;
-    background-size:cover ;
-
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-
-.cross{
-    background-image: url("../resources/crossindexx3.png");
-    grid-area: cross;
-    background-position: center;
-    background-size:cover ;
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-
-.spinning{
-    background-image: url("../resources/spinning.png");
-    grid-area: spinning;
-    background-position: center;
-    background-size:cover ;
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-
-.funcional{
-    background-image: url("../resources/funcionalindex4.png");
-    grid-area: funcional;
-    background-position: center;
-    background-size:cover ;
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-.relax{
-    background-image: url("../resources/yogaindex6.png");
-    grid-area: relax;
-    background-position: center;
-    background-size:cover ;
-    &:hover{
-    transform: scale(1.05,1.05);
-    transition: all 0.5s
-}
-}
-
-} 
-
-.mate {
-    background-color: $color-secundario;
-}
-    .mate__lista {
-        list-style: none;
-        padding: 40px;
-        font-size: 40px;
-        color: $color-principal;
-}
-    .mate__lista1{
-        list-style: none;
-        padding:40px ;
-        font-size: 40px;
-        color: $color-principal;
-} 
-
-
-.galeria {
-    background-color: rgb(255, 255, 255);
-    
-}
-.boton{
-    
-    color: $color-secundario;
-    background-color:$color-principal ;
-    width: 300px;
-    padding: 20px;
-    font-size: 30px;
-    
-    
-
-} 
-.tabla__horarios{
-    width: 90vw;
-    margin: 60px;
-    height: 700px;
-    
-}
-
-.titulo__contactanos{
-    background-image: url("../resources/portada02.png");
-    text-align: center;
-    color: $color-principal;
-}
-
-.titulo__horario{
-    background-image: url("../resources/portada3.png");
-    text-align: center;
-    /* padding: 40px;
-    font: 40px; */
-    color: $color-principal;
-    
-}
-.titulo__sedes{
-    background-image: url("../resources/portada4.png");
-    text-align: center;
-    /* padding: 40px;
-    font: 40px; */
-    color: $color-principal;
-    background-color: $color-secundario;
-}
-.titulo__planes{
-    background-image: url("../resources/portada5.png");
-    text-align: center;
-    /* padding: 40px;
-    font: 40px; */
-    color: $color-principal;
-    background-color: $color-secundario;
-}
-
-.flex__planes{
-    display: flex;
-    list-style: none;
-    padding: 0 10px;
-    flex-wrap: wrap;
-    align-items: auto;
-    justify-content: center;
-    flex-grow: 3;
-}
-
-.img__horario {
-    width: 100vw;
-    justify-content: center;
-}
-
-.foto__sedeprincipal{
-    width: 320px;
-    height: 320px;
-    margin: 60px;
-}
-.foto__sedebanfield{
-    width: 320px;
-    height: 320px;
-    margin: 60px;
-}
-
-.fondo__planes{
-    background-color: $color-secundario;
-}
-.foto__sede{
-    width: 320px;
-    height: 320px;
-    margin: 60px;
-}
-.mapa__sede{
-    width: 90vw;
-    /* margin: 50px; */
-    height: 300px;
-}
-.logo__ig{
-    width: 35px;
-    background-position: 50vw;
-}
-.logo__wpp{
-    width: 40px;
-    background-position: 50vw;
-}
-.logo__fb{
-    width: 25px;
-    background-position: 50vw;
-}
-/* span{
-color: #938c74;
-    font-size: 20px;
-    background-color: rgb(5, 5, 5)
-} */
-.galeria__img--destacada {
-    /* border-top:solid 10px rgb(240, 236, 12) ;
-    border-bottom: solid 10px rgb(240, 236, 12); */
-    
-    background-color: rgb(252, 252, 252);
-    width: 80vw;
-    height: 40vw;
-    /* margin: 100px; */
-    
-}
-.galeria__fotos{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-evenly ;
-    padding: 50px;
-    background-color: white;
-}
-.actividades__horario{
-    width: 65%;
-    height: 400px;
-    margin: 20px;
-}
-.foto1{
-    
-    background-color: $color-secundario;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.foto2{
-    background-color: $color-secundario;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.foto3{
-    background-color: $color-secundario
-    ;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.foto4{
-    background-color: $color-secundario;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.foto5{
-    background-color: rgb(255, 255, 255);
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.foto6{
-    background-color: $color-secundario;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-}
-
-.wpp__img {
-    width: 70px;
-}
-
-.index__img {
-    width: 300px;
-}
-.horarios__grid{
-    width: 100vw;
-    height: 100vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:"portada portada portada"
-                        "cardio  yoga box"
-                        "cardio spinning cross";
-                        background-color: $color-secundario;
-    row-gap: 15px;
-    column-gap: 15px;
-}
-.portada{
-    grid-area: portada;
-    background-image: url("../resources/portada.png");
-    background-position: center;
-    background-size:cover ;
-    background-repeat: no-repeat;
-    
-    width: 100%;
-}
-.cardio{
-    background-image: url("../resources/cardio.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    grid-area: cardio;
-    height: 100%;
-}
-.yoga{
-    grid-area: yoga;
-    background-image: url("../resources/yoga.png");
-    background-position: center;
-    background-size:cover ;
-    background-repeat: no-repeat;
-    
-    width: 100%;
-}
-.box{
-    grid-area: box;
-    background-image: url("../resources/box.png");
-    background-position: center;
-    background-size:cover ;
-    background-repeat: no-repeat;
-    
-    width: 100%;
-}
-
-.spinning{
-    grid-area: spinning;
-    background-image: url("../resources/spinning.png");
-    background-position: center;
-    background-size:cover ;
-    background-repeat: no-repeat;
-    
-    width: 100%;
-}
-.cross{
-    grid-area: cross;
-    background-image: url("../resources/cross.png");
-    background-position: center;
-    background-size:cover ;
-    background-repeat: no-repeat;
-    
-    width: 100%;
-}
-
-.plan__1 {
-width: 300px;
-margin: 70px;
-height:700px;
-}
-
-.plan__2 {
-width: 300px;
-margin: 70px;
-height:700px;
-}
-.plan__3 {
-width: 300px;
-margin: 70px;
-height:700px;
-}
-
-.plan__4 {
-width: 300px;
-margin: 150px;
-height:700px;
-} 
-
-.plan__5 {
-    width: 300px;
-    margin: 150px;
-    height:700px;
-}
 
