--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,12 @@
 @import "variables";
-@import "footer";
+@import "operators";
 @import "header";
 @import"textos";
 @import"main";
+@import "footer";
 @import "mediaquerie";
 
-*{
-    margin: 0px;/* MARGEN EXTERNO */
-    padding: 0px; /* MARGEN INTERNO */
-}
+
 
 
 
