--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,9 +4,8 @@ main {
     background-color:$color-secundario;
     /* height: 500vh; */ 
 }
-.main__index{
-    height: 370vh;
-}
+/* 
+ */
 
 .columna__grid{
     width: 100vw;
